# ARIA_V1

./: .env.example  .gitignore  README.md  aria.py  pyproject.toml  requirements.txt  test_stress.py
agents/: architect_agent.py  bash_agent.py  coder_agent.py  debugger_agent.py  editor_agent.py  engineering_agent.py  orchestrator_agent.py  rd_agent.py  research_agent.py  reviewer_agent.py
projects/a-python-script-that-prints-hello-world-20260617_190246/: README.md  main.py
projects/a-python-script-that-prints-hello-world-20260617_190751/: README.md  config.py  greeter.py  main.py
projects/a-python-script-that-prints-hello-world-20260617_190751/tests/: test_config.py  test_greeter.py
projects/build-a-hello-world-CLI-tool-using-Click-20260618_144837/: main.py  setup.py
projects/build-a-simple-password-manager-20260618_144958/: main.py  requirements.txt
projects/build-a-weather-CLI-tool-that-fetches-we-20260618_144310/: main.py  requirements.txt
projects/test-20260618_195231/: README.md
projects/test-20260618_195356/: README.md
projects/test-20260618_195624/: README.md
projects/test-20260618_195925/: README.md
projects/test-20260618_200301/: README.md
projects/test-20260618_200629/: README.md
projects/test-20260618_200809/: README.md
projects/test-20260618_204617/: README.md
projects/test-20260618_205040/: README.md
skills/code-review/: SKILL.md
skills/refactoring/: SKILL.md
skills/test-generation/: SKILL.md
utils/: codebase_scanner.py  config.py  document_processor.py  file_parser.py  llm.py  memory.py  model_router.py  researcher.py  skill_manager.py  vector_store.py
(+19 files in other folders)
