[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aria-assistant"
version = "1.0.0"
description = "ARIA — AI-powered engineering assistant for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cli", "ai", "engineering", "assistant", "coding"]
authors = [
    {name = "ARIA Team"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "duckduckgo_search>=6.0.0",
    "chromadb>=1.5.0",
    "sentence-transformers>=2.2.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/aria-assistant"
Repository = "https://github.com/aria-assistant/aria"

[project.scripts]
aria = "aria:main"

[tool.setuptools]
py-modules = ["aria"]
packages = ["utils", "agents"]

[tool.setuptools.package-data]
aria = ["*.md", "templates/**/*"]
